--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^16.5.0",
     "express": "4.17.1",
     "sequelize": "^6.23.0",
     "sqlite3": "^5.0.0"
@@ -19,8 +20,8 @@
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22",
     "jest": "^29.7.0",
+    "nodemon": "^2.0.22",
     "supertest": "^6.3.4"
   },
   "engines": {
