--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^16.5.0",
     "express": "4.17.1",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "sequelize": "^6.23.0",
     "sqlite3": "^5.0.0"
   },
