--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:controllers": "jest src/controllers",
-    "test:services": "jest src/services"
+    "test:services": "jest src/services",
+    "migrate": "sequelize-cli db:migrate",
+    "migrate:undo": "sequelize-cli db:migrate:undo",
+    "migrate:undo:all": "sequelize-cli db:migrate:undo:all"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
     "jest": "^29.7.0",
     "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.3",
     "supertest": "^6.3.4"
   },
   "engines": {
