--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "scripts": {
     "start": "nodemon ./src/server.js",
     "seed": "node ./scripts/seedDb.js",
+    "seed:admin": "node ./scripts/seedAdmin.js",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:controllers": "jest src/controllers",
-    "test:services": "jest src/services",
+    "test:services": "jest --testPathPattern=src/services",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo",
     "migrate:undo:all": "sequelize-cli db:migrate:undo:all"
